admin dashboard added

--- a/medicare_frontend/src/index.css
+++ b/medicare_frontend/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
+
 * {
     font-family: 'Montserrat', sans-serif !important;
 }
@@ -73,4 +74,15 @@ label {
 .authentication-form {
     width: 400px;
 }
+
+#components-layout-demo-fixed .logo {
+    float: left;
+    width: 120px;
+    height: 31px;
+    margin: 16px 24px 16px 0;
+    background: rgba(14, 14, 14, 0.2);
+  }
+  .site-layout .site-layout-background {
+    background: #fff;
+  }
 
