--- a/medicare_frontend/src/layout.css
+++ b/medicare_frontend/src/layout.css
@@ -5,38 +5,44 @@
 .logo{
     color: white;
     font-weight: bold;
+    padding-top: 15px;
 }
 
 .sidebar{
-    background-color: #005555;
+    background-color:#003366;
     border-radius: 5px;
     box-shadow: 0 0 2px gray;
     margin-right: 20px;
     min-height: 100%;
     padding: 5px;
     width: 350px;
+    font-weight: bold;
+    font-size: larger;
+    text-align: center;   
+
 }
  .content{
     width: 100%;
-    height: 100%;
+    height: 100%;    
  }
 .header{
-    background-color: white;
+    /* background-image:#e6f2ff !important; */
+    background-image: linear-gradient(to right, #e6f2ff, #e6ffff);
     border-radius: 5px;
-    box-shadow: 0 0 2px gray;
+    box-shadow: 0 0 2px #1a88ff;
     margin-bottom: 20px;
     height: 10vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    font-weight: bold;  
-    font-size: large;
-     
-    ;
+    justify-content:center;
+    font-weight: bolder;  
+    font-size: large;  
+    padding-top: 25px; 
+    font-style: italic;    
 }
 
 .body{
-    background-color: white;
+    background-color: whitesmoke;
     border-radius: 5px;
     box-shadow: 0 0 2px gray;
     height: 82vh;
@@ -44,7 +50,6 @@
     padding: 15px;
     overflow-x: scroll !important;
 }
-
 
 .menu{
     margin-top: 100px;
@@ -56,30 +61,18 @@
 }
 
 .menu-item a{
-    color: rgba(255, 255, 255, 0.727);
+    color: white;
     text-decoration: none;
     font-size: 18px;
     padding: 0 10px;
+    font-weight: normal;
 }
 .menu-item i{
-    color: rgba(255, 255, 255, 0.716);
+    color: white;
     text-decoration: none;
     font-size: 18px;
     margin:0 15px;
-}
-
-.active-menu-item{
-    color: white;
-    background-color: #013737;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-.header-action-icon{
-    font-size: 30px;
-    color: black !important;
-    cursor: pointer;
-    padding-left: 10px;
+    font-weight: lighter;
 }
 
 .ant-scroll-number-only-unit{
@@ -87,10 +80,16 @@
      padding-bottom: -10px !important;
 }
 
-@media screen and (max-width: 768px){
-  
-    .menu{
-        padding: 0 5px;
-    }
-    
+.ant-card-head-title{
+    font-weight: bold;
+    font-size: large;
+    display: inline-block;
+    flex: 1 1;
+    padding: 16px 0;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
+    
+
+
